--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "id": "obsidian-vite",
-  "name": "Obsidian Vite Plugin",
+  "id": "obsidian-dataedit",
+  "name": "Obsidian Dataedit Plugin",
   "version": "0.0.0",
   "minAppVersion": "1.0.0",
-  "description": "A template for an Obsidian plugin with Vite, TS, and React or Solid",
+  "description": "A wrapper for Dataview to make it editable. Built on Solidjs",
   "author": "Unxok",
   "authorUrl": "https://github.com/unxok",
   "isDesktopOnly": false
