--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "obsidian-vite",
+  "name": "obsidian-dataedit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solid-primitives/autofocus": "^0.0.111",
     "postcss-discard": "^2.0.0",
     "postcss-prefix-selector": "^1.16.1",
     "react": "^18.3.1",
@@ -30,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "obsidian": "^1.6.6",
+    "obsidian-dataview": "^0.5.67",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
