--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kobalte/core": "^0.13.3",
     "@solid-primitives/autofocus": "^0.0.111",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-solid": "^0.412.0",
     "postcss-discard": "^2.0.0",
     "postcss-prefix-selector": "^1.16.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "solid-js": "^1.8.18"
+    "solid-js": "^1.8.18",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/luxon": "^3.4.2",
@@ -30,6 +35,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "luxon": "^3.4.4",
     "obsidian": "^1.6.6",
     "obsidian-dataview": "^0.5.67",
     "postcss": "^8.4.39",
