text input now uses a markdown editor

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-solid": "^0.412.0",
+    "monkey-around": "^3.0.0",
     "postcss-discard": "^2.0.0",
     "postcss-prefix-selector": "^1.16.1",
     "react": "^18.3.1",
@@ -38,6 +39,7 @@
     "eslint-plugin-solid": "^0.14.1",
     "luxon": "^3.4.4",
     "obsidian": "^1.6.6",
+    "obsidian-typings": "^2.0.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
