--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "luxon": "^3.4.4",
     "obsidian": "^1.6.6",
     "obsidian-typings": "^2.2.0",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.45",
+    "postcss-nested": "^6.2.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.6",
